bootstrap added & add single page app demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,4 +24,8 @@
 <!-- <app-parent></app-parent> -->
 
 <!-- pipe implementation  -->
-<app-pipes></app-pipes>
+<!-- <app-pipes></app-pipes> -->
+
+<!-- Single page app demo -->
+
+<app-spa-demo></app-spa-demo>
